; ModuleID = '/home/carl/AnghaBench/jq/src/extr_lexer.c_jq_yyget_lineno.c'
source_filename = "/home/carl/AnghaBench/jq/src/extr_lexer.c_jq_yyget_lineno.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.yyguts_t = type { i32 }

@YY_CURRENT_BUFFER = common dso_local global i32 0, align 4
@yylineno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @yyget_lineno(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca %struct.yyguts_t*, align 8
  store i64 %0, i64* %3, align 8
  %5 = load i64, i64* %3, align 8
  %6 = inttoptr i64 %5 to %struct.yyguts_t*
  store %struct.yyguts_t* %6, %struct.yyguts_t** %4, align 8
  %7 = load i32, i32* @YY_CURRENT_BUFFER, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %1
  store i32 0, i32* %2, align 4
  br label %12

10:                                               ; preds = %1
  %11 = load i32, i32* @yylineno, align 4
  store i32 %11, i32* %2, align 4
  br label %12

12:                                               ; preds = %10, %9
  %13 = load i32, i32* %2, align 4
  ret i32 %13
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
